# cosmic-ext-applet-pomodoro

./: CLAUDE.md  Cargo.toml  README.md  justfile
src/: app.rs
